# vivi-music

./: .editorconfig  .gitignore  .gitmodules  AGENTS.md  CONTRIBUTING.md  LICENSE  README.md  build.gradle.kts  build_log.txt  build_log_10.txt  build_log_11.txt  build_log_12.txt  build_log_13.txt  build_log_14.txt  changelog.json  development_guide.md  error_log.txt  error_log_2.txt  et --hard 33c82f9  fix_duplicates.ps1  generate_mocks.js  gradle.properties  gradlew.bat  innertube_build.txt  kover_report_log.txt  kover_retry_log.txt  log.txt  merge_strings.py  rules.md  settings.gradle.kts  test_log.txt
.github/: CONTRIBUTING.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-fftw/: action.yml
.github/workflows/: build.yml  build_pr.yml  build_quick.yml  nightly.yml  release.yml  stale.yml
NEW-UI/contribution/: contribution.json
News/: news1.json  news2.json
OLD-UI/backup/: aboutsunc.txt  backupabout2.txt  colourbackup.txt  content'.txt
OLD-UI/backup/aboutime/: 1day.txt  about.txt
app/: build.gradle.kts  generate_proto.sh  proguard-rules.pro  reply_next.json  yt_video_next.json
app/arm64/release/baselineProfiles/0/: app-arm64-release.dm
app/arm64/release/baselineProfiles/1/: app-arm64-release.dm
app/foss/release/baselineProfiles/0/: app-foss-release.dm
app/foss/release/baselineProfiles/1/: app-foss-release.dm
app/schemas/com.music.vivi.db.InternalDatabase/: 24.json  25.json  26.json  27.json  28.json  34.json
app/src/debug/res/values/: app_name.xml
app/src/debug/res/xml-v25/: shortcuts.xml
app/src/foss/: AndroidManifest.xml
app/src/main/: AndroidManifest.xml  CHANGE LOG 1.1.0.txt
app/src/main/assets/: player_configs.json
app/src/main/assets/news/: news.json  news1.json
app/src/main/cpp/vibrafp/: README.md
app/src/main/cpp/vibrafp/lib/: CMakeLists.txt  vibra.sym  vibra_jni.cpp
app/src/main/proto/: listentogether.proto
app/src/main/res/drawable/: apk_install.xml  app_update.xml  app_uptodate.xml  apple_music_me.xml  apple_skip_next.xml  apple_skip_previous.xml  artist_screen.xml  auto_play.xml  automation_slow_connecttion.xml  avg_time_oldplayer.xml  bg_dialog_rounded.xml  bhim.xml  biotech.xml  canvas_art.xml  cardless_icon.xml  check_box.xml  check_circle.xml  cloud.xml  content_copy.xml  database_upload.xml  delivery_truck_me.xml  deployed_app_update.xml  deployed_server_vivi.xml  downand.xml  featured_play_list.xml  file_export.xml  folder_managed.xml  globe_location_pin.xml  google.xml  google_ico.xml  google_icon.xml  gpay.xml  headset_applemusic.xml  ic_close.xml  ic_download.xml  ic_image_not_supported.xml  ic_launcher_background_v31.xml  ic_launcher_foreground.xml  ic_launcher_monochrome.xml  ic_loading.xml  (+70 more)
app/src/main/res/drawable-night/: widget_background_light.xml
app/src/main/res/layout/: activity_custom_scanner.xml  fragment_update_dialog.xml  widget_compact_square.xml  widget_compact_wide.xml  widget_music_player.xml  widget_turntable.xml  widget_waves_player.xml
app/src/main/res/mipmap-anydpi/: ic_launcher_static_round.xml
app/src/main/res/raw/: appearence_settings.json  backupandrestore.json  clear.json  completedsetup.json  content.json  experimental.json  feedback_animation.json  hearingmusic.json  loliteqrcode.json  loliteqrcodeq.json  lyrics.json  notification.json  notificationpermission.json  party.json  partysett.json  privacy.json  qrcode.json  qrcodeme.json  qrscanme.json  qrscanmusic.json  qrshare_mainactivity.json  searchingerror.json  searchingnetwork.json  smarts.json  storage.json  storage_settings.json  theme.json  updatenew.json  website.json
app/src/main/res/values-DE/: strings.xml
app/src/main/res/values-ar/: strings.xml  vivi_strings.xml
app/src/main/res/values-b+sr+Latn/: strings.xml
app/src/main/res/values-be/: strings.xml
app/src/main/res/values-bg/: strings.xml  vivi_strings.xml
app/src/main/res/values-bn/: strings.xml
app/src/main/res/values-bn-rIN/: strings.xml
app/src/main/res/values-bs/: strings.xml
app/src/main/res/values-ca/: strings.xml  vivi_strings.xml
app/src/main/res/values-cs/: metrolist_strings.xml  strings.xml
app/src/main/res/values-de/: app_name.xml  metrolist_strings.xml  strings.xml  vivi_strings.xml
app/src/main/res/values-el/: strings.xml  (+1 more)
app/src/main/res/values-el-rGR/: strings.xml
appinfo/metadata/android/en-US/: full_description.txt  title.txt
artistvideo/: build.gradle.kts
betterlyrics/: build.gradle.kts
canvas/: build.gradle.kts
docs/: CHANGELOG.md  Documentation.md  Technical_Manual.md  cleanup_list.md  governance.md  index.html  master_docs_structure.md  project_status_report.md  tdd_quality_blueprint.md
docs/technical/: architecture_analysis.md
fastlane/metadata/android/ja/: full_description.txt
gradle/: libs.versions.toml
innertube/: build.gradle.kts
jiosaavn/: build.gradle.kts  jiosaavn.md
kizzy/: build.gradle.kts
kot/: New Text Document.txt
kugou/: build.gradle.kts
kugou/src/test/java/: Test.kt
lastfm/: build.gradle.kts
lrclib/: build.gradle.kts
lyricsProvider/: build.gradle.kts
metadata/: vivi.music.yml
musixmatch/: build.gradle.kts  musixmatch.md
news/: bug.json  news.json  news1.json  news2.json  news3.json
paxsenixlyrics/: build.gradle.kts
scripts/: compose_svg_drawable.py  download_material_icons.py
shazamkit/: build.gradle.kts
simpmusic/: build.gradle.kts
spotify/: build.gradle.kts
spotify/src/main/: AndroidManifest.xml
vivimusiccanvas/: build.gradle.kts
youlyplus/: build.gradle.kts
youlyplus/src/main/: AndroidManifest.xml
(+1410 files in other folders)
